--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
               <h5 class="feature__sub__title">Watch on smart TVs, PlayStation, Xbox, Chromecast, Apple TV, Blu-ray players and more.</h5>
           </div>
           <div class="feature__image__container">
-            <img src="https://www.youtube.com/redirect?event=live_chat&redir_token=QUFFLUhqbW4xcVo2UGtqYnBob3BkajBfUFBzVzJuTEdWUXxBQ3Jtc0tuTDJiUE9pS085TVItd1l5WS0tbzJFY3NQU2xYZTFacXIxbnhpSno5NmxwV1R4eWpTZzFzZzF3aGNQUFB2ZGNYYVhJRnRXTjNOYzBPWkV4M2M4blNGaWtYbmNqZ1JPWFZwNEFkdTBYNklnaVoxbnVrWQ&q=https%3A%2F%2Fassets.nflxext.com%2Fffe%2Fsiteui%2Facquisition%2FourStory%2Ffuji%2Fdesktop%2Ftv.png" alt="" class="feature__image" />
+            <img src="https://assets.nflxext.com/ffe/siteui/acquisition/ourStory/fuji/desktop/tv.png" alt="" class="feature__image" />
             <div class="feature__background__video__container">
               <video autoplay playsinline muted loop class="feature__background__video">
                 <source src="https://assets.nflxext.com/ffe/siteui/acquisition/ourStory/fuji/desktop/video-tv-in-0819.m4v" type="video/mp4">
