--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                 <h6>Downloading...</h6>
               </div>
               <div class="download__gif__container">
-                <img src="https://www.youtube.com/redirect?event=live_chat&redir_token=QUFFLUhqbklfQnBzMGxDTE05MDBjSDdQdjB0Y2hvRk5FQXxBQ3Jtc0trUWFSWFFlWENPb2RZdHdYTENaNkd2Z0JReTl6Y2YzQTZNRWE5dGVtTjBLS1RSOVZnUUo1S2ZXd191SjlrNWZidldwcGxvRzFsdFZZR3hVVDhMVVAxNWY3QUZfbktiMlFPUm9NeHdzTUhRUENWU0VQYw&q=https%3A%2F%2Fassets.nflxext.com%2Fffe%2Fsiteui%2Facquisition%2FourStory%2Ffuji%2Fdesktop%2Fdownload-icon.gif" alt="downloading gif" class="gif">
+                <img src="https://assets.nflxext.com/ffe/siteui/acquisition/ourStory/fuji/desktop/download-icon.gif" alt="downloading gif" class="gif">
               </div>
             </div>
           </div>
