--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
               <h5 class="feature__sub__title">Stream unlimited movies and TV shows on your phone, tablet, laptop, and TV.</h5>
           </div>
           <div class="feature__image__container feature__3__image__container">
-            <img src="https://www.youtube.com/redirect?event=live_chat&redir_token=QUFFLUhqbUdlRzlDc0xyTmRjYzJyUXcxamJZc0t2dldsUXxBQ3Jtc0tsSkluRm16X283NjJROVJIVHo1R2dPX3BVMHp3aVZwSGxfNS1CZ3V5TElBZ1lpTDRadnExTUVDOE1GeDBKOWotUDNNX2dmMXloTGtSZWs1ZWFTY2gxcmhYVHJydjhVUmQxMktHNzRlRWRRdmRqLUpIZw&q=https%3A%2F%2Fassets.nflxext.com%2Fffe%2Fsiteui%2Facquisition%2FourStory%2Ffuji%2Fdesktop%2Fdevice-pile-in.png" alt="" class="feature__image feature__3__image" />
+            <img src="https://assets.nflxext.com/ffe/siteui/acquisition/ourStory/fuji/desktop/device-pile-in.png" alt="" class="feature__image feature__3__image" />
             <div class="feature__background__video__container feature__3__background__video__container">
               <video autoplay playsinline muted loop class="feature__background__video feature__3__background__video">
                 <source src="https://assets.nflxext.com/ffe/siteui/acquisition/ourStory/fuji/desktop/video-devices-in.m4v" type="video/mp4">
